@@ -1,10 +1,15 @@
-2014-07-08  Charlie Zender  <zender@uci.edu>
+2014-07-10  Charlie Zender  <zender@uci.edu>
 
 	* NCO 4.4.5 release procedure:
  	Changes since nco-4_4_4: https DAP, gxvx, mk, ncl_var
 	cd ~/nco;cvs tag -d nco-4_4_5;cvs tag -d nco-4_4_5-1
 	cd ~/nco;cvs commit -m "Preparing nco-4.4.5 release"
 	cvs tag -c nco-4_4_5;cvs tag -c nco-4_4_5-1
+
+	* Deprecate ENABLE_PNETCDF from meaning exposed PnetCDF API
+	Soon it will mean that netCDF4 was built with --enable-pnetcdf
+
+2014-07-08  Charlie Zender  <zender@uci.edu>
 
 	* Handle CF ancillary_variables like, well, ancillary variables
 
